results/SpecGenBench/conversational/log-PrimeCheck-2023_05_18_14_29_27.txt

class PrimeCheck {
   
   /*@ requires a > 0;
     @ ensures (\result == true) <==> (\forall int i; 2 <= i && i <= a/2; a % i != 0);
     @*/
   public boolean isPrime(int a) {
	
	int i = 2;
	int mid = a/2;

	//@ maintaining 2 <= i && i <= mid + 1;
	//@ maintaining (\forall int j; 2 <= j && j < i; a % j != 0);
	//@ decreases mid - i + 2;
	while (i <= mid) {
	   if (a%i == 0)
		return false;
	   i++;
	}
	return true;
   }
}


error: An error while executing a proof script for isPrime: (error "Solver has unexpectedly terminated")
1 error


class PrimeCheck {
   
   /*@ requires a > 0;
     @ ensures (\result == true) <==> (\forall int i; 2 <= i && i <= a/2; a % i != 0);
     @*/
   public boolean isPrime(int a) {
	
	int i = 2;
	int mid = a/2;

	while (i <= mid) {
	   if (a%d == 0)
		return false;
	   i++;
	}
	return true;
   }
}

/home/max/Documents/JMLGPT/tmp/PrimeCheck.java:13: error: cannot find symbol
	   if (a%d == 0)
	         ^
  symbol:   variable d
  location: class PrimeCheck
1 error


class PrimeCheck {
   
   /*@ requires a >= 2;
     @ ensures (\result == true) <==> (\forall int i; 2 <= i && i <= a/2; a % i != 0);
     @*/
   public boolean isPrime(int a) {
	
	int i = 2;
	int mid = a/2;

	while (i <= mid) {
	   if (a%i == 0)
		return false;
	   i++;
	}
	return true;
   }
}

